Fix sidebar scroll on tablets

--- a/ui/scss/component/_navigation.scss
+++ b/ui/scss/component/_navigation.scss
@@ -71,7 +71,7 @@
   }
 
   @media (min-width: $breakpoint-small) {
-    overflow-y: hidden;
+    // overflow-y: hidden;
     justify-content: space-between;
 
     &:hover {
